terraform/instance.tf
resource "aws_key_pair" "deployer" {
  key_name   = "vite-deploy-key"
  public_key = "ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDFadD8DQ27srBBjPZKATUMS9YQgytGY2tsHPpUzFWborI8LR2JJKJeRLXAJRSA8NfMbe5MtxA4k61qWqabCXTrxk02CS3PSUBq/rb2rdlM7zI0Loyb2Bp0K69wJu4UwzRS+ZNrInhPzGY7tpCP01rsuJWQvnj5NyZ+UiYMmdeiCO9KlgZFfXJQB33NSrSrrrKO762chh/EVOchsIpEGehL7sD+zhuoQDz42sZPsDDgboMOu+dP2wuD/nRwLf5T7BafQm5w2emDPhRp/9etEddqpo4wqZLY2o1ko8YDADQiPYgfbJVac0nJQWBVLQYgHLoJXlEwiywzddJL/0uzmIIdmqotf3PSssu7SyqoIycIGZi5JOoDxjMu3nZamGYj/ooMgiW6x93GzdAVqMlpP4fWSpUsCWMx7MI0LTPN1uuVU9F9fpXbTzXOkYj1PdJg [...]
}

data "aws_ami" "ubuntu" {
  most_recent = true
  owners      = ["099720109477"] # Canonical (Ubuntu)

  filter {
    name   = "name"
    values = ["ubuntu/images/hvm-ssd/ubuntu-20.04-amd64-server-*"]
  }

  filter {
    name   = "virtualization-type"
    values = ["hvm"]
  }
}

resource "aws_instance" "web" {
  ami                         = data.aws_ami.ubuntu.id
  instance_type               = "t3.micro"
  subnet_id                   = aws_subnet.public.id
  vpc_security_group_ids      = [aws_security_group.web_sg.id]
  key_name                    = aws_key_pair.deployer.key_name
  associate_public_ip_address = true

  user_data = <<-EOF
              #!/bin/bash
              apt update
              apt install -y nginx
              mkdir -p /var/www/html
              chown -R www-data:www-data /var/www/html
              systemctl enable nginx
              systemctl start nginx
              echo "<h1>Deployment bereit!</h1>" > /var/www/html/index.html
            EOF

  tags = {
    Name = "ReactAppInstance"
  }
}
